# MS-Education

./: .gitignore  Compare Makes Models.ipynb  PyTorch_Data_Augmentation.ipynb  PythonBasics.py  README.md  ReadData  freMTPL2sev.csv  freMTPLsev.csv
.ipynb_checkpoints/: RGS_Lecture_1-checkpoint.pipeline
BinaryClassificationInsuranceRenewal/: EDU_RenewalProject.ipynb  EDU_RenewalProjectPublic.ipynb  InsuranceRenewalDB.csv.txt
DeepLearning/DLA/: README.md
DeepLearning/DLA/NEMO/: README.md  pyproject.toml  requirements.txt  voice_assistant.ipynb  voice_embs_age.ipynb  voice_embs_sex.ipynb
DeepLearning/NLP/Tasks/LLMfinetuning/: README.md  pyproject.toml
DeepLearning/NLP/Tasks/LLMfinetuning/notebooks/: mset.space - LLM_ft.ipynb
DeepLearning/NLP/Tasks/LLMfinetuning/reports/: test2.csv
DeepLearning/NLP/Tasks/LLMfinetuning/scripts/: ft_rouge.py  instruct_ft.py  peft.py  rlhf_detox.py
FeatureEngineering/: Groupings.py  interactions.py
Graphs/: Graph Analytics Easy Start.ipynb  Graph_tutorial 11-11-2018.ipynb  Graph_tutorial.ipynb
LGBM/: LGBMBasic.py
MLPractice/: !mset.space - Template.ipynb  mset.space - Evidently.ipynb  mset.space - Facesearch.ipynb  mset.space - Optuna.ipynb  mset.space - PyTorch basics.ipynb  mset.space - Rapids.ipynb  mset.space - TensorFlow basics.ipynb  mset.space - ZIP_model.ipynb
NLP/: First.py
Presentations/: OOP.ipynb  testing.ipynb
RL/: RL - hello world.ipynb
UsefullCode/: .gitignore  LICENSE  README.md  RGS_Lecture_1.pipeline  Types_in_Python.ipynb  freMTPL2sev.csv
Vehicles/: MM.csv  MMW.csv  MakesModelsSmartLookUp.ipynb
(+79 files in other folders)
