[tool.poetry]
name = "speech-pipe"
version = "0.1.0"
description = ""
authors = ["mset"]
readme = "README.md"
packages = [{include = "speech_pipe"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
